@@ -1,5 +1,7 @@
 [Changes 1.2c01]
 
+* Fix memory leak in banlist.c. (caf)
+
 * Apply a fix contributed by cpet for the configure script on
   FreeBSD 9. (caf)
 
